tests/baselines/reference/tsxAttributeResolution7.errors.txt
file.tsx(9,2): error TS2322: Type '{ "data-foo": number; }' is not assignable to type '{ "data-foo"?: string; }'.
  Types of property '"data-foo"' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		test1: { "data-foo"?: string };
    	}
    }
    
    // Error
    <test1 data-foo={32} />;
     ~~~~~
!!! error TS2322: Type '{ "data-foo": number; }' is not assignable to type '{ "data-foo"?: string; }'.
!!! error TS2322:   Types of property '"data-foo"' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
    
    // OK
    <test1 data-foo={'32'} />;
    <test1 data-bar={'32'} />;
    <test1 data-bar={32} />;
    